# spectralETD

./: .readthedocs.yaml  Burgers1d-ETD.ipynb  Burgers1d-IE.ipynb  Burgers1d.ipynb  CH2d.ipynb  CH3d.ipynb  CahnHilliard2d-ETD.ipynb  DiffusionAdvection1d-ETD.ipynb  DiffusionAdvection1d.ipynb  LICENSE.txt  PFC2d-Crystal-ETD.ipynb  PFC2d-Crystal-IE.ipynb  PFC2d-Lamelar-ETD.ipynb  PFC2d.ipynb  README.md  mkdocs.yml  pyproject.toml  setup.py
.ipynb_checkpoints/: CahnHilliard2d-ETD-checkpoint.ipynb
docs/: conf.py  examples.md  index.md  library.md  requirements.in  requirements.txt  spectralETD.md
examples/: Burgers1d.ipynb  CH2d.ipynb  CH3d.ipynb  DiffusionAdvection1d.ipynb
src/: PyspectralETD.py  __init__.py  spectralETD.py  volumerender.py
src/spectralETD/: __init__.py  spectralETD.py  volumerender.py
